--- a/tourist-web/src/main/webapp/view/supplier/salesStatistics.html
+++ b/tourist-web/src/main/webapp/view/supplier/salesStatistics.html
@@ -1,66 +1,163 @@
 ﻿<!DOCTYPE html>
+<!--
+  ~ 版权所有:杭州火图科技有限公司
+  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+  ~
+  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
+  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+  ~ 2013-2016. All rights reserved.
+  -->
 
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
-    <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
-    <script src="../../assets/seajs/sea.js"></script>
-    <script src="../../assets/seajs/config.js"></script>
-    <script>seajs.use(["bootstrap", "bootstrap-table.min", "bootstrap-table-zh-CN", "supplierList"]);</script>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <title>H+ 后台主题UI框架 - 客户管理</title>
+    <meta name="keywords" content="H+后台主题,后台bootstrap框架,会员中心主题,后台HTML,响应式后台">
+    <meta name="description" content="H+是一个完全响应式，基于Bootstrap3最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术">
+
+    <!--<link rel="shortcut icon" href="favicon.ico"> -->
+    <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
+    <link href="http://resali.huobanplus.com/cdn/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/animate.min.css" rel="stylesheet"/>
+    <link href="../../assets/css/style.min.css?v=4.0.0" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css"/>
+
 </head>
-<body>
-<div class="panel-body" style="padding-bottom:0;">
-    <div class="panel panel-default">
-        <div class="panel-heading">查询条件</div>
-        <div class="panel-body">
-            <form id="formSearch" class="form-horizontal">
-                <div class="form-group" style="margin-top:15px">
-                    <label class="control-label col-sm-1" for="supplierName">供应商名称</label>
-                    <div class="col-sm-2">
-                        <input type="text" name="supplierName" id="supplierName" class="form-control"
-                               placeholder="供应商名称">
+
+<body class="gray-bg">
+<div class="wrapper wrapper-content">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="ibox">
+                <div class="ibox-content">
+                    <h2>销售统计</h2>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="ibox">
+                                <div class="ibox-content">
+                                    <h4>订单总金额</h4>
+                                    <h1 class="no-margins" th:text="${moneyTotal}">886,200</h1>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="ibox">
+                                <div class="ibox-content">
+                                    <h4>佣金</h4>
+                                    <h1 class="no-margins" th:text="${commissionTotal}">1 738,200</h1>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="ibox">
+                                <div class="ibox-content">
+                                    <h4>总退款</h4>
+                                    <h1 class="no-margins" th:text="${refundTotal}">-200,100</h1>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="ibox">
+                                <div class="ibox-content">
+                                    <h4>订单总数</h4>
+                                    <h1 class="no-margins" th:text="${orderTotal}">54,200</h1>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-sm-4">
-                        <button class="btn btn-primary">搜 索</button>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <div class="ibox">
+                <div class="ibox-title">
+                    <div class="form-group">
+                    <div class="form-inline">
+                        <input size="50" name="Date" placeholder="时间" class="form-control" type="text">
+                        <button type="button" class="btn  btn-success ">查询</button>
+                        <button type="button" class="btn  btn-success ">导出明细</button>
                     </div>
                 </div>
-            </form>
+                </div>
+                <div class="ibox-content">
+                    <div class="tabs-container">
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a data-toggle="tab" href="#tab-1" aria-expanded="true"> 订单详情</a>
+                            </li>
+                            <li class=""><a data-toggle="tab" href="#tab-2" aria-expanded="false">销售统计</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div id="tab-1" class="tab-pane active">
+                                <table class="table table-hover" data-toggle="table" data-url="../../mock/supplier/orderDetailsList.json"
+                                       data-method="get" data-side-pagination="server" data-pagination="true" data-striped="true"
+                                       data-page-number="1" data-page-size="10" data-query-params="getParams" data-toolbar="#toolbar">
+                                    <thead>
+                                    <tr>
+                                        <th data-field="orderNo" data-align="center">订单号</th>
+                                        <th data-field="touristName" data-align="center"
+                                            data-formatter="touristNameFormatter">商品名称</th>
+                                        <th data-field="orderMoney" data-align="center"
+                                            data-sortable="true">订单金额</th>
+                                        <th data-field="commission" data-align="center"
+                                            data-sortable="true">佣金</th>
+                                        <th data-field="createTime" data-align="center"
+                                            data-sortable="true">下单时间</th>
+                                        <th data-field="payTime" data-align="center"
+                                            data-sortable="true">支付时间</th>
+                                        <th data-field="peopleNumber" data-align="center"
+                                            data-sortable="true">人员数量</th>
+                                    </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                            <div id="tab-2" class="tab-pane">
+                                <table class="table table-hover" data-toggle="table" data-url="../../mock/supplier/goodsStatisticsList.json"
+                                       data-method="get" data-side-pagination="server" data-pagination="true" data-striped="true"
+                                       data-page-number="1" data-page-size="10" data-query-params="getParams" data-toolbar="#toolbar">
+                                    <thead>
+                                    <tr>
+                                        <th data-field="touristName" data-align="center"
+                                            data-formatter="touristNameFormatter">商品名称</th>
+                                        <th data-field="price" data-align="center"
+                                            data-sortable="true">单价</th>
+                                        <th data-field="rebate" data-align="center"
+                                            data-sortable="true">佣金比例</th>
+                                        <th data-field="buyTotal" data-align="center"
+                                            data-sortable="true">购买次数</th>
+                                        <th data-field="moneyTotal" data-align="center"
+                                            data-sortable="true">总金额</th>
+                                        <th data-field="commissionTotal" data-align="center"
+                                            data-sortable="true">总佣金</th>
+                                    </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
-
-    <div id="toolbar" class="btn-group">
-        <button id="btn_add" type="button" class="btn btn-default">
-            <a href="addModel.html"><span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span></a>
-        </button>
-        <button id="btn_edit" type="button" class="btn btn-default">
-            <a><span class="glyphicon glyphicon-pencil" aria-hidden="true">修改</span></a>
-        </button>
-        <button id="btn_delete" type="button" class="btn btn-default">
-            <a><span class="glyphicon glyphicon-remove" aria-hidden="true">删除</span></a>
-        </button>
-    </div>
-
-    <table data-toggle="table" data-url="../../mock/modelList.json" data-method="get" data-side-pagination="server"
-           data-pagination="true" data-striped="true" data-search="true" data-strict-search="true"
-           data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
-           data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-           data-query-params="getParams" data-toolbar="#toolbar">
-        <thead>
-        <tr>
-            <th data-field="supplierName" data-align="center" data-sortable="true">名称</th>
-            <th data-field="adminAccount" data-align="center" data-sortable="true">登陆名</th>
-            <th data-field="address" data-align="center" data-sortable="true">所在地</th>
-            <th data-field="contacts" data-align="center" data-sortable="true">联系人</th>
-            <th data-field="contactNumber" data-align="center" data-sortable="true">电话</th>
-            <th data-field="createTime" data-align="center" data-sortable="true">注册时间</th>
-            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents"
-                data-align="center">操作
-            </th>
-        </tr>
-        </thead>
-    </table>
 </div>
+<script src="http://resali.huobanplus.com/cdn/jquery/3.1.1/jquery.min.js"></script>
+<script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>
+<script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/moment.js"></script>
+<script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
+<script src="../../assets/js/page/supplier/salesStatistics.js"></script>
 </body>
+
 </html>
