--- a/tourist-web/src/main/webapp/view/platform/touristBuyer/touristBuyerList.html
+++ b/tourist-web/src/main/webapp/view/platform/touristBuyer/touristBuyerList.html
@@ -42,33 +42,36 @@
     </div>
 
 
-    <table id="table" data-toggle="table" data-url="../../../mock/platform/touristBuyerList.json" data-method="get"
-           data-side-pagination="server"
-           data-pagination="true" data-striped="true"
-           data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
-           data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-           data-query-params="getParams">
-        <thead>
-        <tr>
-            <th data-field="id" data-align="center" data-sortable="true">id</th>
-            <th data-field="buyerName" data-align="center" data-sortable="true">采购商名称</th>
-            <th data-field="buyerDirector" data-align="center" data-sortable="true">负责人</th>
-            <th data-field="telPhone" data-align="center" data-sortable="true">手机号</th>
-            <th data-field="businessLicencesUri" data-formatter="businessLicencesUriFormatter" data-align="center"
-                data-sortable="true">营业执照
-            </th>
-            <th data-field="IDCardImg" data-formatter="IDCardImgFormatter" data-align="center" data-sortable="true">
-                身份证
-            </th>
-            <th data-field="buyerId" data-align="center" data-sortable="true">用户id</th>
-            <th data-field="nickname" data-align="center" data-sortable="true">用户昵称</th>
-            <th data-field="checkState.value" data-align="center" data-sortable="true">状态</th>
-            <th data-field="payState.value" data-align="center" data-sortable="true">支付状态</th>
-            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents" data-align="center">操作
-            </th>
-        </tr>
-        </thead>
-    </table>
+    <div class="panel panel-default">
+        <table id="table" data-toggle="table" data-url="../../../mock/platform/touristBuyerList.json" data-method="get"
+               data-side-pagination="server"
+               data-pagination="true" data-striped="true"
+               data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
+               data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
+               data-query-params="getParams">
+            <thead>
+            <tr>
+                <th data-field="id" data-align="center" data-sortable="true">id</th>
+                <th data-field="buyerName" data-align="center" data-sortable="true">采购商名称</th>
+                <th data-field="buyerDirector" data-align="center" data-sortable="true">负责人</th>
+                <th data-field="telPhone" data-align="center" data-sortable="true">手机号</th>
+                <th data-field="businessLicencesUri" data-formatter="businessLicencesUriFormatter" data-align="center"
+                    data-sortable="true">营业执照
+                </th>
+                <th data-field="IDCardImg" data-formatter="IDCardImgFormatter" data-align="center" data-sortable="true">
+                    身份证
+                </th>
+                <th data-field="buyerId" data-align="center" data-sortable="true">用户id</th>
+                <th data-field="nickname" data-align="center" data-sortable="true">用户昵称</th>
+                <th data-field="checkState.value" data-align="center" data-sortable="true">状态</th>
+                <th data-field="payState.value" data-align="center" data-sortable="true">支付状态</th>
+                <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents" data-align="center">
+                    操作
+                </th>
+            </tr>
+            </thead>
+        </table>
+    </div>
 </div>
 <script src="../../../assets/js/jquery.min.js"></script>
 <script src="../../../assets/libs/bootstrap/bootstrap.min.js"></script>
