--- a/tourist-web/src/main/webapp/view/platform/supplier/supplier.html
+++ b/tourist-web/src/main/webapp/view/platform/supplier/supplier.html
@@ -22,8 +22,6 @@
     <!--/*@thymesVar id="supplier" type="com.huotu.tourist.entity.TouristSupplier"*/-->
     <div class="h">
         <span class="icon-sprite icon-list"></span>
-        <h3 th:if="${supplier!=null}">修改供应商</h3>
-        <h3 th:if="${supplier==null}">添加供应商</h3>
         <div class="bar">
             <a class="btn-lit" href="supplierList.html" target="content">
                 <span>返回管理列表</span></a>
@@ -39,57 +37,57 @@
                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
                         <tbody>
                         <tr>
-                            <th>供应商名称：</th>
+                            <th class="control-label">供应商名称：</th>
                             <td>
                                 <input name="supplierName" type="text" id="supplierName"
                                        th:value="${supplier.supplierName}"
                                        maxlength="50"
-                                       class="input-normal" placeholder="请输入模型名称">
+                                       class="form-control" placeholder="请输入模型名称">
                             </td>
                         </tr>
                         <tr>
-                            <th>所在地：</th>
+                            <th class="control-label">所在地：</th>
                             <td>
                                 <div style="position: relative; "><!-- container -->
-                                    <input readonly type="text" name="address" id="address"
+                                    <input readonly type="text" class="form-control" name="address" id="address"
                                            data-toggle="city-picker"
                                            value="北京市/北京市/海淀区" th:value="${supplier.address}">
                                 </div>
                             </td>
                         </tr>
                         <tr>
-                            <th>详细地址：</th>
+                            <th class="control-label">详细地址：</th>
                             <td>
                                 <input type="text" name="detailedAddress" id="detailedAddress"
-                                       th:value="${supplier.detailedAddress}" class="input-normal"
+                                       th:value="${supplier.detailedAddress}" class="form-control"
                                        placeholder="详细地址">
                             </td>
                         </tr>
                         <tr>
-                            <th>联系人：</th>
+                            <th class="control-label">联系人：</th>
                             <td>
                                 <input type="text" name="contacts" id="contacts" th:value="${supplier.contacts}"
-                                       class="input-normal"
+                                       class="form-control"
                                        placeholder="联系人">
                             </td>
                         </tr>
                         <tr>
-                            <th>联系电话：</th>
+                            <th class="control-label">联系电话：</th>
                             <td>
                                 <input type="text" name="contactNumber" id="contactNumber"
                                        th:value="${supplier.contactNumber}"
-                                       class="input-normal"
+                                       class="form-control"
                                        placeholder="联系电话">
                             </td>
                         </tr>
                         <tr th:if="${supplier!=null}">
-                            <th>原营业执照：</th>
+                            <th class="control-label">原营业执照：</th>
                             <td>
                                 <img res:src="${supplier.businessLicenseUri}"/>
                             </td>
                         </tr>
                         <tr>
-                            <th>营业执照：</th>
+                            <th class="control-label">营业执照：</th>
                             <td>
                                 <input type="hidden" name="businessLicenseUri" id="businessLicenseUri"
                                        class="input-normal" placeholder="营业执照"
@@ -98,26 +96,26 @@
                             </td>
                         </tr>
                         <tr>
-                            <th>管理员账号：</th>
+                            <th class="control-label">管理员账号：</th>
                             <td>
                                 <input type="text" name="loginName" id="adminAccount"
                                        th:value="${supplier.loginName}"
-                                       class="input-normal"
+                                       class="form-control"
                                        placeholder="管理员账号">
                             </td>
                         </tr>
                         <tr>
-                            <th>管理员密码：</th>
+                            <th class="control-label">管理员密码：</th>
                             <td>
                                 <input type="password" name="password" id="adminPassword"
-                                       th:value="${supplier.password}" class="input-normal"
+                                       th:value="${supplier.password}" class="form-control"
                                        placeholder="管理员密码">
                             </td>
                         </tr>
                         <tr>
-                            <th>备注：</th>
+                            <th class="control-label">备注：</th>
                             <td>
-                                <textarea rows="" cols="" style="width: 250px; height: 60px;" class="input-normal"
+                                <textarea rows="" cols="" style="width: 250px; height: 60px;" class="form-control"
                                           id="remarks" name="remarks" th:value="${supplier.remarks}"
                                           placeholder="备注"></textarea>
                             </td>
