--- a/tourist-web/src/main/webapp/view/platform/supplier/supplierList.html
+++ b/tourist-web/src/main/webapp/view/platform/supplier/supplierList.html
@@ -28,34 +28,36 @@
         </div>
     </div>
 
-    <div id="toolbar" class="btn-group">
-        <button id="btn_add" type="button" class="btn btn-default">
-            <a href="supplier.html" th:href="@{/distributionPlatform/toAddTouristSupplier}">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span>
-            </a>
-        </button>
-    </div>
+    <div class="panel panel-default">
+        <div id="toolbar" class="btn-group">
+            <button id="btn_add" type="button" class="btn btn-default">
+                <a href="supplier.html" th:href="@{/distributionPlatform/toAddTouristSupplier}">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span>
+                </a>
+            </button>
+        </div>
 
-    <table id="table" data-toggle="table" data-url="../../../mock/platform/supplierList.json" data-method="get"
-           data-side-pagination="server"
-           data-pagination="true" data-striped="true"
-           data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
-           data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-           data-query-params="getParams" data-toolbar="#toolbar">
-        <thead>
-        <tr>
-            <th data-field="supplierName" data-align="center" data-sortable="true">名称</th>
-            <th data-field="adminAccount" data-align="center" data-sortable="true">登陆名</th>
-            <th data-field="address" data-align="center" data-sortable="true">所在地</th>
-            <th data-field="contacts" data-align="center" data-sortable="true">联系人</th>
-            <th data-field="contactNumber" data-align="center" data-sortable="true">电话</th>
-            <th data-field="createTime" data-align="center" data-sortable="true">注册时间</th>
-            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents"
-                data-align="center">操作
-            </th>
-        </tr>
-        </thead>
-    </table>
+        <table id="table" data-toggle="table" data-url="../../../mock/platform/supplierList.json" data-method="get"
+               data-side-pagination="server"
+               data-pagination="true" data-striped="true"
+               data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
+               data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
+               data-query-params="getParams" data-toolbar="#toolbar">
+            <thead>
+            <tr>
+                <th data-field="supplierName" data-align="center" data-sortable="true">名称</th>
+                <th data-field="adminAccount" data-align="center" data-sortable="true">登陆名</th>
+                <th data-field="address" data-align="center" data-sortable="true">所在地</th>
+                <th data-field="contacts" data-align="center" data-sortable="true">联系人</th>
+                <th data-field="contactNumber" data-align="center" data-sortable="true">电话</th>
+                <th data-field="createTime" data-align="center" data-sortable="true">注册时间</th>
+                <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents"
+                    data-align="center">操作
+                </th>
+            </tr>
+            </thead>
+        </table>
+    </div>
 </div>
 <script src="../../../assets/js/jquery.min.js"></script>
 <script src="../../../assets/libs/bootstrap/bootstrap.min.js"></script>
