--- a/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
+++ b/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
@@ -43,66 +43,70 @@
             </form>
         </div>
     </div>
-    <ul class="nav nav-tabs" role="tablist" id="myTab">
-        <li role="presentation" class="active"><a href="#all" role="tab" data-toggle="tab">全部</a></li>
-        <li role="presentation"><a href="#recommend" role="tab" data-toggle="tab">推荐商品</a></li>
-    </ul>
+    <div class="panel panel-default">
+        <ul class="nav nav-tabs" role="tablist" id="myTab">
+            <li role="presentation" class="active"><a href="#all" role="tab" data-toggle="tab">全 部</a></li>
+            <li role="presentation"><a href="#recommend" role="tab" data-toggle="tab">推荐商品</a></li>
+        </ul>
 
-    <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="all">
-            <table id="table" data-toggle="table" data-url="../../../mock/platform/touristGoodList.json"
-                   data-method="get"
-                   data-side-pagination="server"
-                   data-pagination="true" data-striped="true"
-                   data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
-                   data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-                   data-query-params="getParams">
-                <thead>
-                <tr>
-                    <th data-field="id" data-align="center" data-sortable="true">id</th>
-                    <th data-field="touristName" data-align="center" data-sortable="true">商品名称</th>
-                    <th data-field="touristImgUri" data-formatter="touristImgUriFormatter" data-align="center">图片</th>
-                    <th data-field="supplierName" data-align="center" data-sortable="true">供应商名称</th>
-                    <th data-field="touristType" data-align="center" data-sortable="true">线路类型</th>
-                    <th data-field="activityType" data-align="center" data-sortable="true">活动类型</th>
-                    <th data-field="price" data-align="center" data-sortable="true">价格</th>
-                    <th data-field="surplus" data-align="center" data-sortable="true">剩余库存</th>
-                    <th data-field="destination" data-align="center" data-sortable="true">目的地</th>
-                    <th data-field="rebate" data-align="center" data-sortable="true">佣金比例</th>
-                    <th data-field="touristCheckState.value" data-align="center" data-sortable="true">审核状态</th>
-                    <th data-field="action" data-formatter="actionFormatter" data-align="center">操作</th>
-                </tr>
-                </thead>
-            </table>
-        </div>
-        <div role="tabpanel" class="tab-pane" id="recommend">
-            <table id="recommendTable" data-toggle="table"
-                   data-url="../../../mock/platform/recommendTouristGoodList.json"
-                   data-method="get"
-                   data-side-pagination="server"
-                   data-pagination="true" data-striped="true"
-                   data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
-                   data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-                   data-query-params="getParams">
-                <thead>
-                <tr>
-                    <th data-field="id" data-align="center" data-sortable="true">id</th>
-                    <th data-field="touristName" data-align="center" data-sortable="true">商品名称</th>
-                    <th data-field="touristImgUri" data-formatter="touristImgUriFormatter" data-align="center">图片</th>
-                    <th data-field="supplierName" data-align="center" data-sortable="true">供应商名称</th>
-                    <th data-field="touristType" data-align="center" data-sortable="true">线路类型</th>
-                    <th data-field="activityType" data-align="center" data-sortable="true">活动类型</th>
-                    <th data-field="price" data-align="center" data-sortable="true">价格</th>
-                    <th data-field="surplus" data-align="center" data-sortable="true">剩余库存</th>
-                    <th data-field="destination" data-align="center" data-sortable="true">目的地</th>
-                    <th data-field="rebate" data-align="center" data-sortable="true">佣金比例</th>
-                    <th data-field="touristCheckState.value" data-align="center" data-sortable="true">审核状态</th>
-                    <th data-field="action" data-formatter="actionFormatter" data-align="center">操作</th>
-                </tr>
-                </thead>
-            </table>
-        </div>
+        <div class="tab-content">
+            <div role="tabpanel" class="tab-pane active" id="all">
+                <table id="table" data-toggle="table" data-url="../../../mock/platform/touristGoodList.json"
+                       data-method="get"
+                       data-side-pagination="server"
+                       data-pagination="true" data-striped="true"
+                       data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
+                       data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
+                       data-query-params="getParams">
+                    <thead>
+                    <tr>
+                        <th data-field="id" data-align="center" data-sortable="true">id</th>
+                        <th data-field="touristName" data-align="center" data-sortable="true">商品名称</th>
+                        <th data-field="touristImgUri" data-formatter="touristImgUriFormatter" data-align="center">图片
+                        </th>
+                        <th data-field="supplierName" data-align="center" data-sortable="true">供应商名称</th>
+                        <th data-field="touristType" data-align="center" data-sortable="true">线路类型</th>
+                        <th data-field="activityType" data-align="center" data-sortable="true">活动类型</th>
+                        <th data-field="price" data-align="center" data-sortable="true">价格</th>
+                        <th data-field="surplus" data-align="center" data-sortable="true">剩余库存</th>
+                        <th data-field="destination" data-align="center" data-sortable="true">目的地</th>
+                        <th data-field="rebate" data-align="center" data-sortable="true">佣金比例</th>
+                        <th data-field="touristCheckState.value" data-align="center" data-sortable="true">审核状态</th>
+                        <th data-field="action" data-formatter="actionFormatter" data-align="center">操作</th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
+            <div role="tabpanel" class="tab-pane" id="recommend">
+                <table id="recommendTable" data-toggle="table"
+                       data-url="../../../mock/platform/recommendTouristGoodList.json"
+                       data-method="get"
+                       data-side-pagination="server"
+                       data-pagination="true" data-striped="true"
+                       data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
+                       data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
+                       data-query-params="getParams">
+                    <thead>
+                    <tr>
+                        <th data-field="id" data-align="center" data-sortable="true">id</th>
+                        <th data-field="touristName" data-align="center" data-sortable="true">商品名称</th>
+                        <th data-field="touristImgUri" data-formatter="touristImgUriFormatter" data-align="center">图片
+                        </th>
+                        <th data-field="supplierName" data-align="center" data-sortable="true">供应商名称</th>
+                        <th data-field="touristType" data-align="center" data-sortable="true">线路类型</th>
+                        <th data-field="activityType" data-align="center" data-sortable="true">活动类型</th>
+                        <th data-field="price" data-align="center" data-sortable="true">价格</th>
+                        <th data-field="surplus" data-align="center" data-sortable="true">剩余库存</th>
+                        <th data-field="destination" data-align="center" data-sortable="true">目的地</th>
+                        <th data-field="rebate" data-align="center" data-sortable="true">佣金比例</th>
+                        <th data-field="touristCheckState.value" data-align="center" data-sortable="true">审核状态</th>
+                        <th data-field="action" data-formatter="actionFormatter" data-align="center">操作</th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
 
+        </div>
     </div>
 
 
