线路类型，活动类型提交

--- a/tourist-web/src/main/webapp/view/platform/supplier/supplierList.html
+++ b/tourist-web/src/main/webapp/view/platform/supplier/supplierList.html
@@ -21,7 +21,7 @@
                                placeholder="供应商名称" th:value="${supplierName}">
                     </div>
                     <div class="col-sm-4">
-                        <button class="btn btn-primary btnSearch">搜 索</button>
+                        <button type="button" class="btn btn-primary btnSearch">搜 索</button>
                     </div>
                 </div>
             </form>
