--- a/tourist-web/src/main/webapp/view/platform/trouristGood/touristGood.html
+++ b/tourist-web/src/main/webapp/view/platform/trouristGood/touristGood.html
@@ -149,7 +149,7 @@
                                     <td>
                                         <input type="text" name="receptionTelephone"
                                                th:value="${touristGood.receptionTelephone}" class="form-control"
-                                               placeholder="地接人">
+                                               placeholder="联系电话">
 
                                     </td>
                                 </tr>
