--- a/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
+++ b/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="col-sm-2">
-                        <button class="btn btn-primary btnSearch">搜 索</button>
+                        <button type="button" class="btn btn-primary btnSearch">搜 索</button>
                     </div>
                 </div>
             </form>
