订单列表接口修改

--- a/tourist-web/src/main/webapp/view/platform/activityType/activityTypeList.html
+++ b/tourist-web/src/main/webapp/view/platform/activityType/activityTypeList.html
@@ -65,9 +65,8 @@
 <script src="../../../assets/libs/bootstrap/bootstrap.min.js"></script>
 <script src="../../../assets/libs/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="../../../assets/libs/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
-<script src="../../../assets/libs/validate/jquery.validate.min.js"></script>
-<script src="../../../assets/libs/validate/jquery.validate.addMethod.js"></script>
 <script src="../../../assets/js/page/platform/activityTypeList.js" th:inline="javascript"></script>
+<script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
 
 <!--<script>seajs.use(["bootstrap", "bootstrap-table.min", "bootstrap-table-zh-CN", "supplierList"]);</script>-->
 </body>
