--- a/tourist-web/src/main/webapp/view/platform/main.html
+++ b/tourist-web/src/main/webapp/view/platform/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
     <title>行装路线管理系统</title>
     <meta charset="UTF-8" content="text/html">
     <link href="../../assets/css/main.css" type="text/css" rel="stylesheet"/>
@@ -271,7 +271,6 @@
 </script>
 <script th:inline="javascript">
     uploaderUrl = /*[[@{/upload/fine}]]*/ null;
-
 </script>
 <script>seajs.use(["main"]);</script>
 
