--- a/tourist-web/src/main/webapp/view/supplier/orderList.html
+++ b/tourist-web/src/main/webapp/view/supplier/orderList.html
@@ -8,7 +8,7 @@
   ~ 2013-2016. All rights reserved.
   -->
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css"/>
@@ -50,6 +50,13 @@
                                         <label class="control-label" for="tel">购买人电话：</label>
                                         <input type="text" class="form-control input-sm mb10"
                                                id="tel" name="tel" placeholder="购买人电话"/>
+                                    </div>
+
+                                    <div class="form-group"
+                                         th:if="${#authorization.expression('hasRole(''ROLE_MA'')')}">
+                                        <label class="control-label" for="tel">供应商名称：</label>
+                                        <input type="text" class="form-control input-sm mb10"
+                                               id="supplierName" name="supplierName" placeholder="供应商名称"/>
                                     </div>
                                     <!--<p></p>-->
                                     <div class="form-group">
@@ -121,6 +128,10 @@
         <thead>
         <tr>
             <th data-field="orderNo" data-align="center">订单号</th>
+            <th th:if="${#authorization.expression('hasRole(''ROLE_MA'')')}"
+                data-field="supplierName" data-align="center">供应商名称
+            </th>
+
             <th data-field="touristName" data-align="center" data-formatter="touristNameFormatter">路线名称</th>
             <th data-field="orderMoney" data-align="center" data-sortable="true">金额</th>
             <th data-field="buyerName" data-align="center" data-sortable="true">购买人</th>
