--- a/tourist-web/src/main/webapp/view/platform/main.html
+++ b/tourist-web/src/main/webapp/view/platform/main.html
@@ -129,7 +129,7 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplier/supplierList.html" target="content"><i
+                            <a href="../common/orderList.html" target="content"><i
                                     class="fa fa-caret-right"></i>订单列表<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
