--- a/tourist-web/src/main/webapp/view/supplier/goodsDetails.html
+++ b/tourist-web/src/main/webapp/view/supplier/goodsDetails.html
@@ -16,7 +16,7 @@
         <span class="icon-sprite icon-list"></span>
         <h3>订单详情</h3>
         <div class="bar">
-            <a class="btn-lit" href="orderList.html" target="content">
+            <a class="btn-lit" href="../common/orderList.html" target="content">
                 <span>返回订单列表</span></a>
         </div>
     </div>
