--- a/tourist-web/src/main/webapp/view/supplier/goodsList.html
+++ b/tourist-web/src/main/webapp/view/supplier/goodsList.html
@@ -66,7 +66,7 @@
                                 <p style="height: 8px;"></p>
 
                                 <div class="form-inline" style="max-width: 926px; text-align: right;">
-                                    <button type="button" class="btn btn-primary">筛选</button>
+                                    <button id="searchList" type="button" class="btn btn-primary">筛选</button>
                                     <button type="button" class="btn btn-primary">显示全部</button>
                                 </div>
                             </div>
@@ -80,12 +80,6 @@
     <div id="toolbar" class="btn-group">
         <button id="btn_add" type="button" class="btn btn-default">
             <a href="addModel.html"><span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span></a>
-        </button>
-        <button id="btn_edit" type="button" class="btn btn-default">
-            <a><span class="glyphicon glyphicon-pencil" aria-hidden="true">修改</span></a>
-        </button>
-        <button id="btn_delete" type="button" class="btn btn-default">
-            <a><span class="glyphicon glyphicon-remove" aria-hidden="true">删除</span></a>
         </button>
     </div>
 
@@ -119,7 +113,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
-<script src="../../assets/js/page/supplier/goodsList.js"></script>
+<script src="../../assets/js/page/supplier/goodsList.js" th:inline="javascript"></script>
 </body>
 
 </html>
