--- a/tourist-web/src/main/webapp/view/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/supplier/main.html
@@ -66,7 +66,7 @@
                         <span class="fa arrow"></span>
                     </a>
                     <ul class="nav nav-second-level">
-                        <li><a class="J_menuItem" href="orderList.html">订单列表</a>
+                        <li><a class="J_menuItem" href="../common/orderList.html">订单列表</a>
                         </li>
 
                     </ul>
@@ -103,7 +103,7 @@
                     <a href="#"><i class="fa fa-edit"></i><span class="nav-label">设置</span><span
                             class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        <li><a class="J_menuItem" href="">供应商信息</a>
+                        <li><a class="J_menuItem" href="supplierDetails.html">供应商信息</a>
                         </li>
                         <li><a class="J_menuItem" href="">收款账户</a>
                         </li>
