--- a/tourist-web/src/main/webapp/view/supplier/supplierDetails.html
+++ b/tourist-web/src/main/webapp/view/supplier/supplierDetails.html
@@ -1,66 +1,124 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+﻿<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:res="http://resource.jiangcai.me" lang="en">
 <head>
     <title></title>
+    <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/jquery-fine-uploader/5.10.0/fine-uploader-new.min.css"
+          property=""/>
     <link href="../../assets/css/admin.content.css" type="text/css" rel="stylesheet"/>
     <link href="../../assets/css/admin.global.css" type="text/css" rel="stylesheet"/>
     <link href="../../assets/css/global.css" type="text/css" rel="stylesheet"/>
+    <link href="../../assets/libs/cityPicker/css/city-picker.css" rel="stylesheet"/>
     <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
-    <script src="../../assets/seajs/sea.js" type="application/javascript"></script>
-    <script src="../../assets/seajs/config.js" type="application/javascript"></script>
+
+    <style>
+        .city-picker-span {
+            width: 390px !important;
+        }
+    </style>
 </head>
 <body>
 <div class="block">
+    <!--/*@thymesVar id="supplier" type="com.huotu.tourist.entity.TouristSupplier"*/-->
     <div class="h">
         <span class="icon-sprite icon-list"></span>
-        <h3>添加模型</h3>
+        <h3>修改供应商</h3>
         <div class="bar">
             <a class="btn-lit" href="supplierList.html" target="content">
-                <span>返回模型管理列表</span></a>
+                <span>返回管理列表</span></a>
         </div>
     </div>
     <div class="cnt-wp">
-        <form method="post" id="addModelForm">
+
+        <form id="modelForm" method="post" class="form-inline" action="supplierList.html"
+              th:action="@{${supplier==null ? '/distributionPlatform/addSupplier' : '/distributionPlatform/updateSupplier'}}">
             <div class="cnt form">
                 <div class="division">
-                    <input type="hidden" name="hidModelID" id="hidModelID">
+                    <input type="hidden" name="id" id="id" th:value="${supplier.id}">
                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
                         <tbody>
                         <tr>
-                            <th>模型名称：</th>
+                            <th>供应商名称：</th>
                             <td>
-                                <input name="txtModelName" type="text" id="txtModelName" maxlength="50"
-                                       class="input-normal" placeholder="请输入模型名称">
+                                <input name="supplierName" type="text" id="supplierName"
+                                       th:value="${supplier.supplierName}"
+                                       maxlength="50"
+                                       class="input-normal" placeholder="请输入供应商名称">
                             </td>
                         </tr>
                         <tr>
-                            <th>模型描述：</th>
+                            <th>所在地：</th>
+                            <td>
+                                <div style="position: relative; "><!-- container -->
+                                    <input readonly type="text" name="address" id="address"
+                                           data-toggle="city-picker"
+                                           value="北京市/北京市/海淀区" th:value="${supplier.address}">
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>详细地址：</th>
+                            <td>
+                                <input type="text" name="detailedAddress" id="detailedAddress"
+                                       th:value="${supplier.detailedAddress}" class="input-normal"
+                                       placeholder="详细地址">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>联系人：</th>
+                            <td>
+                                <input type="text" name="contacts" id="contacts" th:value="${supplier.contacts}"
+                                       class="input-normal"
+                                       placeholder="联系人">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>联系电话：</th>
+                            <td>
+                                <input type="text" name="contactNumber" id="contactNumber"
+                                       th:value="${supplier.contactNumber}"
+                                       class="input-normal"
+                                       placeholder="联系电话">
+                            </td>
+                        </tr>
+                        <tr th:if="${supplier!=null}">
+                            <th>原营业执照：</th>
+                            <td>
+                                <img res:src="${supplier.businessLicenseUri}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>营业执照：</th>
+                            <td>
+                                <input type="hidden" name="businessLicenseUri" id="businessLicenseUri"
+                                       class="input-normal" placeholder="营业执照"
+                                       th:value="${supplier.businessLicenseUri}">
+                                <div class="col-sm-10" id="supplier-uploader"></div>
+                            </td>
+                        </tr>
+                        <!--<tr>-->
+                            <!--<th>管理员账号：</th>-->
+                            <!--<td>-->
+                                <!--<input type="text" name="loginName" id="adminAccount"-->
+                                       <!--th:value="${supplier.loginName}"-->
+                                       <!--class="input-normal"-->
+                                       <!--placeholder="管理员账号">-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<th>管理员密码：</th>-->
+                            <!--<td>-->
+                                <!--<input type="password" name="password" id="adminPassword"-->
+                                       <!--th:value="${supplier.password}" class="input-normal"-->
+                                       <!--placeholder="管理员密码">-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                        <tr>
+                            <th>备注：</th>
                             <td>
                                 <textarea rows="" cols="" style="width: 250px; height: 60px;" class="input-normal"
-                                          id="txtModelDescription" name="txtModelDescription"></textarea>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>模型类型：</th>
-                            <td>
-                                <select name="txtModelType" class="input-normal" id="txtModelType">
-                                    <option value="-1">==请选择模型类型==</option>
-                                    <option value="0">文章模型</option>
-                                    <option value="1">公告模型</option>
-                                    <option value="2">视频模型</option>
-                                    <option value="3">图库模型</option>
-                                    <option value="4">下载模型</option>
-                                    <option value="5">链接模型</option>
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>排序权重：</th>
-                            <td>
-                                <input name="txtOrderWeight" type="text" id="txtOrderWeight" value="50"
-                                       class="input-normal" placeholder="请输入排序权重">
-                                <span style="color:#ccc;">数字越大排越前面</span>
+                                          id="remarks" name="remarks" th:value="${supplier.remarks}"
+                                          placeholder="备注"></textarea>
                             </td>
                         </tr>
                         </tbody>
@@ -74,6 +132,13 @@
         </form>
     </div>
 </div>
-<script>seajs.use(["validate", "message", "AddModel"]);</script>
+<script src="../../assets/js/jquery.min.js"></script>
+<script src="../../assets/libs/bootstrap/bootstrap.min.js"></script>
+<script src="../../assets/libs/validate/jquery.validate.min.js"></script>
+<script src="../../assets/libs/validate/jquery.validate.addMethod.js"></script>
+<script src="../../assets/libs/cityPicker/js/city-picker.data.js"></script>
+<script src="../../assets/libs/cityPicker/js/city-picker.js"></script>
+<script src="../../assets/libs/fine-upload/jquery.fine-uploader.min.js"></script>
+<script src="../../assets/js/page/platform/supplier.js"></script>
 </body>
 </html>
