订单页面的脚本优化

--- a/tourist-web/src/main/webapp/view/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/common/orderList.html
@@ -114,21 +114,21 @@
 
 <div class="tabs-container">
     <ul id="shortcutSearch" class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" aria-expanded="true">全部</a>
+        <li  style="cursor: pointer"  class="active"><a data-toggle="tab" aria-expanded="true">全部</a>
         </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">未支付</a>
+        <li  style="cursor: pointer"  class=""><a data-toggle="tab" aria-expanded="false">未支付</a>
         </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已支付</a>
+        <li  style="cursor: pointer"  class=""><a data-toggle="tab" aria-expanded="false">已支付</a>
         </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已确认</a>
+        <li  style="cursor: pointer"  class=""><a data-toggle="tab" aria-expanded="false">已确认</a>
         </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已完成</a>
+        <li  style="cursor: pointer"  class=""><a data-toggle="tab" aria-expanded="false">已完成</a>
         </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">退款中</a>
+        <li  style="cursor: pointer"  class=""><a data-toggle="tab" aria-expanded="false">退款中</a>
         </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已退款</a>
+        <li  style="cursor: pointer"  class=""><a data-toggle="tab" aria-expanded="false">已退款</a>
         </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已取消</a>
+        <li  style="cursor: pointer"  class=""><a data-toggle="tab" aria-expanded="false">已取消</a>
         </li>
     </ul>
     <div class="tab-content">
